--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 				"react": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
 		},
 		"dependencies": {
+				"babel": "^6.23.0",
 				"babel-preset-es2015": "^6.24.0",
 				"babelify": "^7.2.0",
 				"browser-sync": "^2.18.8",
@@ -44,8 +45,11 @@
 				"lodash.debounce": "^4.0.8",
 				"marked": "^0.3.6",
 				"metalsmith": "^2.3.0",
+				"metalsmith-collections": "^0.9.0",
 				"metalsmith-layouts": "^1.8.0",
+				"metalsmith-markdown": "^0.2.1",
 				"metalsmith-metadata-directory": "^1.0.1",
+				"metalsmith-permalinks": "^0.5.0",
 				"metalsmith-register-helpers": "^0.3.0",
 				"nunjucks": "^3.0.0",
 				"nunjucks-markdown": "^2.0.1",
