--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 				"metalsmith-collections": "^0.9.0",
 				"metalsmith-layouts": "^1.8.0",
 				"metalsmith-markdown": "^0.2.1",
+				"metalsmith-metadata": "^0.0.4",
 				"metalsmith-metadata-directory": "^1.0.1",
 				"metalsmith-permalinks": "^0.5.0",
 				"metalsmith-register-helpers": "^0.3.0",
