--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
 				"deploy-staging": "gulp build && surge dist/ absentees.surge.sh",
 				"deploy-production": "gulp deploy",
 				"dump": "./node_modules/.bin/dato dump",
-				"test": "yarn run mocha && yarn run casper",
-				"casper": "casperjs test ./test/casperjs/*.test.js",
-				"mocha": "mocha --compilers js:babel-core/register --recursive ./test/mocha/*.js",
-				"react": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+				"dev": "./node_modules/.bin/dato dump && gulp serve"
 		},
 		"dependencies": {
 				"babel-preset-es2015": "^6.24.0",
