--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.0",
     "@gridsome/source-datocms": "^0.2.1",
+    "@gridsome/source-graphql": "^0.1.0",
     "gridsome": "^0.7.0"
   },
   "devDependencies": {
