--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@gridsome/plugin-google-analytics": "^0.1.0",
     "@gridsome/source-datocms": "^0.2.1",
     "@gridsome/source-graphql": "^0.1.0",
-    "gridsome": "^0.7.0"
+    "gridsome": "^0.7.0",
+    "gridsome-source-rss": "^1.0.0"
   },
   "devDependencies": {
     "node-sass": "^4.13.1",
