--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -11,9 +11,36 @@ collections:
     folder: "_posts/project" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    media_folder: '/static/images/uploads'
+    public_folder: '../../static/images/uploads'
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Featured Image", name: "thumbnail", widget: "image"}
-      - {label: "Description", name: "description", widget: "markdown"}
       - {label: "Body", name: "body", widget: "markdown"}
+  - name: "experiments" # Used in routes, e.g., /admin/collections/blog
+    label: "Experiments" # Used in the UI
+    folder: "_posts/experiments" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    media_folder: '/static/images/uploads'
+    public_folder: '../../static/images/uploads'
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "blog"}
+      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Featured Image", name: "thumbnail", widget: "image"}
+      - {label: "Body", name: "body", widget: "markdown"}
+  - name: "pages"
+    label: "Pages"
+    files:
+        - label: "About"
+          name: "about"
+          file: "_content/pages/about.md"
+          fields:
+              - { label: Title, name: title, widget: string }
+              - { label: Description, name: body, widget: markdown }
+              - {
+                    label: "Featured Image",
+                    name: "thumbnail",
+                    widget: "image",
+                }
