--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gridsome/source-datocms": "^0.2.1",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/source-graphql": "^0.1.0",
+    "are.na": "^0.1.5",
     "gridsome": "^0.7.0",
     "gridsome-plugin-netlify-cms": "^1.0.9",
     "gridsome-source-rss": "^1.0.0"
