--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -44,3 +44,16 @@ collections:
                     name: "thumbnail",
                     widget: "image",
                 }
+        - label: "CV"
+          name: "cv"
+          file: "_content/pages/cv.md"
+          fields:
+            - label: "Experience"
+              name: "jobs"
+              widget: "list"
+              fields:
+                  - {label: Where, name: where, widget: string}
+                  - { label: Years, name: years, widget: string }
+                  - { label: Role, name: role, widget: string }
+                  - { label: Description, name: description, widget: string }
+              
