--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -8,7 +8,7 @@ public_folder: "/images/uploads" # The src attribute for uploaded media will beg
 collections:
   - name: "project" # Used in routes, e.g., /admin/collections/blog
     label: "Project" # Used in the UI
-    folder: "_posts/project" # The path to the folder where the documents are stored
+    folder: "_content/posts/project" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     media_folder: '/static/images/uploads'
@@ -20,7 +20,7 @@ collections:
       - {label: "Body", name: "body", widget: "markdown"}
   - name: "experiment" # Used in routes, e.g., /admin/collections/blog
     label: "Experiment" # Used in the UI
-    folder: "_posts/experiment" # The path to the folder where the documents are stored
+    folder: "_content/posts/experiment" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
     slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     media_folder: '/static/images/uploads'
