--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,8 +1,8 @@
 backend:
   name: git-gateway
-  # branch: master
-  branch: develop # Branch to update (optional; defaults to master)
-local_backend: true
+  branch: master
+  # branch: develop # Branch to update (optional; defaults to master)
+# local_backend: true
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 collections:
