--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,21 +39,20 @@ collections:
           fields:
               - { label: Title, name: title, widget: string }
               - { label: Description, name: body, widget: markdown }
-              - {
-                    label: "Featured Image",
-                    name: "thumbnail",
-                    widget: "image",
-                }
-        - label: "CV"
-          name: "experience"
-          file: "_content/pages/experience.md"
-          fields:
-            - label: "Experience"
-              name: "jobs"
-              widget: "list"
-              fields:
-                  - {label: Where, name: where, widget: string}
-                  - { label: Years, name: years, widget: string }
-                  - { label: Role, name: role, widget: string }
-                  - { label: Description, name: description, widget: string }
+              - label: "Jobs"
+                name: "jobs"
+                widget: "list"
+                fields:
+                    - { label: Where, name: where, widget: string}
+                    - { label: Years, name: years, widget: string }
+                    - { label: Role, name: role, widget: string }
+                    - { label: Description, name: description, widget: string }
+              - label: "Education"
+                name: "education"
+                widget: "list"
+                fields:
+                    - { label: Where, name: where, widget: string}
+                    - { label: Years, name: years, widget: string }
+                    - { label: Role, name: role, widget: string }
+            
               
