--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "gridsome build",
     "develop": "gridsome develop",
     "explore": "gridsome explore",
-    "localgit": "npx netlify-cms-proxy-server"
+    "localgit": "npx netlify-cms-proxy-server",
+    "netlify:deploy": "netlify build && netlify deploy --prod"
   },
   "dependencies": {
     "@gridsome/plugin-google-analytics": "^0.1.0",
