--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "@gridsome/transformer-remark": "^0.5.0",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.54.8",
+    "sass-loader": "^10.1.1"
   }
 }
