--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "absentees-co",
   "private": true,
   "scripts": {
-    "build": "gridsome build",
-    "develop": "gridsome develop",
-    "explore": "gridsome explore",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider gridsome build",
+    "develop": "NODE_OPTIONS=--openssl-legacy-provider gridsome develop",
+    "explore": "NODE_OPTIONS=--openssl-legacy-provider gridsome explore",
     "localgit": "npx netlify-cms-proxy-server",
     "netlify:deploy": "netlify build && netlify deploy --prod"
   },
